derive_tests/tests/compile_fail/nested_no_struct.stderr
error: Unexpected modifier: nested
 --> tests/compile_fail/nested_no_struct.rs:7:14
  |
7 |     #[modify(nested)]
  |              ^^^^^^
